WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89243
IndexedDB: Raise exceptions when methods are called on deleted objects
https://bugs.webkit.org/show_bug.cgi?id=89243
Summary
IndexedDB: Raise exceptions when methods are called on deleted objects
Joshua Bell
Reported
2012-06-15 13:21:38 PDT
IndexedDB: Raise exceptions when methods are called on deleted objects
Attachments
Patch
(28.71 KB, patch)
2012-06-15 13:26 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-06-15 13:26:09 PDT
Created
attachment 147886
[details]
Patch
Joshua Bell
Comment 2
2012-06-15 13:27:34 PDT
tony@ - r?
Alec Flett
Comment 3
2012-06-15 13:58:58 PDT
Comment on
attachment 147886
[details]
Patch LGTM, FWIW
WebKit Review Bot
Comment 4
2012-06-15 15:49:21 PDT
Comment on
attachment 147886
[details]
Patch Clearing flags on attachment: 147886 Committed
r120504
: <
http://trac.webkit.org/changeset/120504
>
WebKit Review Bot
Comment 5
2012-06-15 15:49:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug