IndexedDB: Raise exceptions when methods are called on deleted objects https://bugs.webkit.org/show_bug.cgi?id=89243

Reviewed by Tony Chang.

Source/WebCore:

Implement the IDB spec requirement that InvalidStateError exceptions are
thrown when methods are called on objects (i.e. object stores and indexes)
that have been deleted within a version change transaction.

Test: storage/indexeddb/deleted-objects.html

* Modules/indexeddb/IDBDatabase.cpp:
(WebCore::IDBDatabase::deleteObjectStore): Don't relay to transaction if back-end failed.
* Modules/indexeddb/IDBIndex.cpp: Check deleted state in methods, raise if set.
(WebCore::IDBIndex::IDBIndex):
(WebCore::IDBIndex::openCursor):
(WebCore::IDBIndex::count):
(WebCore::IDBIndex::openKeyCursor):
(WebCore::IDBIndex::get):
(WebCore::IDBIndex::getKey):
* Modules/indexeddb/IDBIndex.h: Add flag to track deleted state, method to mark it.
(WebCore::IDBIndex::markDeleted):
(IDBIndex):
* Modules/indexeddb/IDBObjectStore.cpp: Check deleted state in methods, raise if set.
(WebCore::IDBObjectStore::IDBObjectStore):
(WebCore::IDBObjectStore::get):
(WebCore::IDBObjectStore::add):
(WebCore::IDBObjectStore::put):
(WebCore::IDBObjectStore::deleteFunction):
(WebCore::IDBObjectStore::clear):
(WebCore::IDBObjectStore::createIndex):
(WebCore::IDBObjectStore::index):
(WebCore::IDBObjectStore::deleteIndex): If the index being deleted has been instantiated,
mark it as deleted.
(WebCore::IDBObjectStore::openCursor):
(WebCore::IDBObjectStore::count):
* Modules/indexeddb/IDBObjectStore.h: Add flag to track deleted state, method to mark it.
(WebCore::IDBObjectStore::markDeleted):
(IDBObjectStore):
* Modules/indexeddb/IDBTransaction.cpp:
(WebCore::IDBTransaction::objectStore):
(WebCore::IDBTransaction::objectStoreDeleted): If the store being deleted has been instantiated,
mark it as deleted.

LayoutTests:

* storage/indexeddb/deleted-objects-expected.txt: Added.
* storage/indexeddb/deleted-objects.html: Added.
* storage/indexeddb/resources/deleted-objects.js: Added.
(test):
(openDatabase.request.onsuccess.request.onsuccess):
(openDatabase.request.onsuccess):
(openDatabase):
* storage/indexeddb/resources/transaction-basics.js: Fix test that relied on
non-compliant behavior.
(addRemoveIDBObjects):
(addRemoveAddIDBObjects):
* storage/indexeddb/transaction-basics-expected.txt:


Canonical link: https://commits.webkit.org/107116@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120504 268f45cc-cd09-0410-ab3c-d52691b4dbfc